--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     body {
       background-color: #f5f5f5;
       font-family: sans-serif;
-      padding: 2em;
+      padding: 1em;
       line-height: 1.6;
     }
     h1, h2 {
@@ -23,19 +23,16 @@
     .search-bar {
       position: sticky;
       top: 0;
-      background: #f5f5f5;
+      background: #e0e0e0;
       padding: 1em;
     }
   </style>
 </head>
 <body>
 
-  <div class="search-bar">
-    <form action="/search" method="get">
-      <input type="text" name="q" placeholder="キーワードを検索" />
-      <button type="submit">検索</button>
-    </form>
-  </div>
+  {% if request.endpoint != 'verify_totp' %}
+    {% include '_search_bar.html' %}
+  {% endif %}
 
   {% block content %}
   {% endblock %}
