--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -6,8 +6,7 @@
 
 {% block content %}
   <h1>{{ article.title }}</h1>
-  <p><strong>記事ID:</strong> {{ article.article_id }}</p>
-  <p><strong>本文:</strong><br>{{ article.body }}</p>
+  <p><strong>本文</strong><br>{{ article.body }}</p>
   <p><strong>キーワード:</strong> {{ article.keywords }}</p>
 
   <h2>関連記事</h2>
