--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -31,6 +31,10 @@
 {% endfor %}
 </ul>
 
-<a href="/login">新しい記事を投稿する</a>
+{% if current_user.is_authenticated %}
+    <a href="{{ url_for('form') }}">新しい記事を投稿する</a>
+{% else %}
+    <a href="#" onclick="openLoginModal()">新しい記事を投稿する</a>
+{% endif %}
 
 {% endblock %}
